--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
                             <li>
                                 <a href="teachers-list.html">授课教师</a>
                             </li>
-                            <li><a href="{% url 'org_list' %}">授课机构</a></li>
+                            <li><a href="{% url 'org:org_list' %}">授课机构</a></li>
                         </ul>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                 <div class="module3_1 left">
                     <img width="228" height="463" src="{% static 'images/module3_1.jpg' %}"/>
                     <p class="fisrt_word">名校来袭<br/>权威认证</p>
-                    <a class="more" href="org-list.html">查看更多机构 ></a>
+                    <a class="more" href="{% url 'org:org_list' %}">查看更多机构 ></a>
                 </div>
                 <div class="right">
                     <ul>
@@ -580,7 +580,7 @@
 </section>
 <script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
-<script type="text/javascript" src="{% static '' %}js/plugins/laydate/laydate.js"></script>
+<script type="text/javascript" src="{% static 'js/plugins/laydate/laydate.js' %}"></script>
 <script src="{% static 'js/plugins/layer/layer.js' %}"></script>
 <script src="{% static 'js/plugins/queryCity/js/public.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
