--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -63,13 +63,13 @@
                 {% for org in all_orgs.object_list %}
                 <dl class="des difdes">
                     <dt>
-                        <a href="org-detail-homepage.html">
+                        <a href="{% url 'org:org_home' org.id %}">
                             <img width="200" height="120" class="scrollLoading" data-url="{{ MEDIA_URL }}{{ org.image }}"/>
                         </a>
                     </dt>
                     <dd>
                         <div class="clearfix">
-                             <a href="org-detail-homepage.html">
+                             <a href="{% url 'org:org_home' org.id %}">
                                  <h1>{{ org.name }}</h1>
                                  <div class="pic fl">
 
@@ -81,7 +81,7 @@
                              </a>
                         </div>
                         <ul class="cont">
-                            <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
+                            <li class="first"><p class="pic9">课程数：<span>{{ org.courses_num }}</span></p><p class="c7">学习人数：<span>{{ org.students }}</span></p></li>
                             <li class="c8" style="padding-left:18px;">{{ org.address }}</li>
                             <li class="pic10" style="padding-left:18px;">经典课程：
 
@@ -142,8 +142,9 @@
                     <input type="text" name="course_name" id="companyAddress" placeholder="课程名" maxlength="50" />
                 </div>
                 <p class="error company-tips" id="jsCompanyTips"></p>
+                {% csrf_token %}
 				<input class="btn" type="text" id="jsStayBtn" value="立即咨询 >" />
-            {% csrf_token %}
+
             </form>
 		</div>
 
@@ -163,4 +164,29 @@
 		</div>
         </div>
 </section>
+{% endblock %}
+{% block custom_js2 %}
+ <script>
+    $(document).ready(function(){
+        $('#jsStayBtn').on('click', function(){
+            $.ajax({
+                cache: false,
+                type: "POST",
+                url:"/org/add_ask/",
+                data:$('#jsStayForm').serialize(),
+                async: true,
+                success: function(data) {
+                    if(data.status == 'success'){
+                        $('#jsStayForm')[0].reset();
+                        $('#jsCompanyTips').html('');
+                        alert("提交成功")
+                    }else if(data.status == 'fail'){
+                        $('#jsCompanyTips').html(data.msg)
+                    }
+                },
+            });
+        });
+    })
+
+</script>
 {% endblock %}
