--- a/templates/org-detail-course.html
+++ b/templates/org-detail-course.html
@@ -2,6 +2,9 @@
 {% load staticfiles %}
 {% block title %}机构课程{% endblock %}
 {% block page_path %}机构课程{% endblock %}
+{% block active_org %}
+    active
+{% endblock %}
 {% block right_form %}
       <div class="right companycenter layout" >
 		<div class="head">
