--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,8 @@
 					<!--登录后跳转-->
 
 
-                        <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                        <a style="color:white" class="fr loginbtn" href="login.html">登录</a>
-
-
+                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                        <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
 
 				</div>
 			</div>
@@ -57,16 +55,16 @@
 				<div class="nav">
 					<div class="wp">
 						<ul>
-							<li ><a href="index.html">首页</a></li>
-							<li >
-								<a href="course-list.html">
+							<li ><a href="{% url 'index' %}">首页</a></li>
+							<li class="{% block active_course %}{% endblock %}" >
+								<a href="{% url 'course:course_list' %}">
 									公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
 								</a>
 							</li>
-							<li >
+							<li class="{% block active_teacher %}{% endblock %}" >
 								<a href="teachers-list.html">授课教师</a>
 							</li>
-							<li class="active" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
+							<li class="{% block active_org %}{% endblock %}" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
 					</div>
 				</div>
