--- a/templates/org-detail-desc.html
+++ b/templates/org-detail-desc.html
@@ -2,6 +2,9 @@
 {% load staticfiles %}
 {% block title %}机构介绍{% endblock %}
 {% block page_path %}机构介绍{% endblock %}
+{% block active_org %}
+    active
+{% endblock %}
 {% block right_form %}
 <div class="right companycenter layout" >
         <div class="head">
