--- a/templates/org-detail-homepage.html
+++ b/templates/org-detail-homepage.html
@@ -2,6 +2,9 @@
 {% load staticfiles %}
 {% block title %}机构首页{% endblock %}
 {% block page_path %}机构首页{% endblock %}
+{% block active_org %}
+    active
+{% endblock %}
 {% block right_form %}
       <div class="right companycenter layout grouping" >
             <div class="head">
