--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,32 @@
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
 					<!--登录后跳转-->
 
-
-                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                    {% if not request.user.is_authenticated %}
+                    <!--登录后跳转-->
+                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a> -->
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
 
+                    {% else %}
+                        <div class="personal">
+                            <dl class="user fr">
+                                <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                <dt><img width="20" height="20" src="/media/image/2016/12/default_big_14.png"/></dt>
+                            </dl>
+                            <div class="userdetail">
+                                <dl>
+                                    <dt><img width="80" height="80" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                    <dd>
+                                        <h2>django</h2>
+                                        <p>{{ user.username }}</p>
+                                    </dd>
+                                </dl>
+                                <div class="btn">
+                                    <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
+                                    <a class="fr" href="/logout/">退出</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
 				</div>
 			</div>
 
@@ -62,7 +84,7 @@
 								</a>
 							</li>
 							<li class="{% block active_teacher %}{% endblock %}" >
-								<a href="teachers-list.html">授课教师</a>
+								<a href="{% url 'org:teacher_list' %}">授课教师</a>
 							</li>
 							<li class="{% block active_org %}{% endblock %}" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
