--- a/templates/index.html
+++ b/templates/index.html
@@ -31,24 +31,26 @@
                         <div class="personal">
                             <dl class="user fr">
                                 <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
-                                <dt><img width="20" height="20" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
                                 <dl>
-                                    <dt><img width="80" height="80" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                    <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                                     <dd>
                                         <h2>django</h2>
                                         <p>{{ user.username }}</p>
                                     </dd>
                                 </dl>
                                 <div class="btn">
-                                    <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
+                                    <a class="personcenter fl" href="{% url 'users:info' %}">进入个人中心</a>
                                     <a class="fr" href="/logout/">退出</a>
                                 </div>
                             </div>
                         </div>
                     {% endif %}
-
+                        <a href="{% url 'users:my_message' %}">
+                            <div class="msg-num"><span id="MsgNum">{{ request.user.get_unread_message }}</span></div>
+                        </a>
                 </div>
             </div>
 
@@ -103,40 +105,13 @@
         <div class="fl">
             <div class="imgslide">
                 <ul class="imgs">
-
-                    <li>
-                        <a href="http://www.imooc.com">
-                            <img width="1200" height="478" src="/media/banner/2016/11/57a801860001c34b12000460.jpg"/>
+                    {% for banner in all_banners %}
+                        <li>
+                        <a href="{{ banner.url }}">
+                            <img width="1200" height="478" src="{{ MEDIA_URL }}{{ banner.image }}"/>
                         </a>
                     </li>
-
-                    <li>
-                        <a href="http://www.projectsedu.com">
-                            <img width="1200" height="478" src="/media/banner/2016/11/57aa86a0000145c512000460.jpg"/>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="http://www.projectsedu.com">
-                            <img width="1200" height="478"
-                                 src="/media/banner/2016/11/57a801860001c34b12000460_z4Vb8zl.jpg"/>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="http://www.projectsedu.com">
-                            <img width="1200" height="478"
-                                 src="/media/banner/2016/11/57aa86a0000145c512000460_nMwvoQD.jpg"/>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="http://www.projectsedu.com">
-                            <img width="1200" height="478"
-                                 src="/media/banner/2016/11/57aa86a0000145c512000460_GXIBATC.jpg"/>
-                        </a>
-                    </li>
-
+                    {% endfor %}
 
                 </ul>
             </div>
@@ -182,137 +157,45 @@
                 <div class="module1_1 left">
                     <img width="228" height="614" src="{% static 'images/module1_1.jpg' %}"/>
                     <p class="fisrt_word">名师授课<br/>专业权威</p>
-                    <a class="more" href="course-list.html">查看更多课程 ></a>
+                    <a class="more" href="{% url 'course:course_list' %}">查看更多课程 ></a>
                 </div>
                 <div class="right group_list">
                     <div class="module1_2 box">
                         <div class="imgslide2">
                             <ul class="imgs">
 
-                                <li>
-                                    <a href="course-detail.html">
-                                        <img width="470" height="300" src="/media/courses/2016/12/python文件处理.jpg"/>
+                                {% for banner_course in banner_courses %}
+                                    <li>
+                                    <a href="{% url 'course:course_detail' banner_course.id %}">
+                                        <img width="470" height="300" src="{{ MEDIA_URL }}{{ banner_course.image }}"/>
                                     </a>
                                 </li>
-
-                                <li>
-                                    <a href="course-detail.html">
-                                        <img width="470" height="300" src="/media/courses/2016/12/python面向对象.jpg"/>
-                                    </a>
-                                </li>
-
+                                {% endfor %}
                             </ul>
                         </div>
                         <div class="unslider-arrow2 prev"></div>
                         <div class="unslider-arrow2 next"></div>
                     </div>
 
-                    <div class="module1_3 box">
-                        <a href="course-detail.html">
-                            <img width="233" height="190" src="/media/courses/2016/11/mysql.jpg"/>
+                    {% for course in courses %}
+                         <div class="module1_{{ forloop.counter|add:2 }} box">
+                        <a href="{% url 'course:course_detail' course.id %}">
+                            <img width="233" height="190" src="{{ MEDIA_URL }}{{ course.image }}"/>
                         </a>
                         <div class="des">
-                            <a href="course-detail.html">
-                                <h2 title="django入门">django入门</h2>
+                            <a href="{% url 'course:course_detail' course.id %}">
+                                <h2 title="{{ course.name }}">{{ course.name }}</h2>
                             </a>
-                            <span class="fl">难度：<i class="key">初级</i></span>
-                            <span class="fr">学习人数：3</span>
+                            <span class="fl">难度：<i class="key">{{ course.get_degree_display }}</i></span>
+                            <span class="fr">学习人数：{{ course.students }}</span>
                         </div>
                         <div class="bottom">
-                            <span class="fl" title="慕课网">慕课网</span>
-                            <span class="star fr">0</span>
+                            <span class="fl" title="{{ course.course_org.name }}">{{ course.course_org.name }}</span>
+                            <span class="star fr">{{ course.fav_nums }}</span>
                         </div>
                     </div>
+                    {% endfor %}
 
-                    <div class="module1_4 box">
-                        <a href="course-detail.html">
-                            <img width="233" height="190"
-                                 src="/media/courses/2016/11/57035ff200014b8a06000338-240-135.jpg"/>
-                        </a>
-                        <div class="des">
-                            <a href="course-detail.html">
-                                <h2 title="java入门">java入门</h2>
-                            </a>
-                            <span class="fl">难度：<i class="key">中级</i></span>
-                            <span class="fr">学习人数：0</span>
-                        </div>
-                        <div class="bottom">
-                            <span class="fl" title="北京大学">北京大学</span>
-                            <span class="star fr">0</span>
-                        </div>
-                    </div>
-
-                    <div class="module1_5 box">
-                        <a href="course-detail.html">
-                            <img width="233" height="190"
-                                 src="/media/courses/2016/11/540e57300001d6d906000338-240-135.jpg"/>
-                        </a>
-                        <div class="des">
-                            <a href="course-detail.html">
-                                <h2 title="python入门">python入门</h2>
-                            </a>
-                            <span class="fl">难度：<i class="key">中级</i></span>
-                            <span class="fr">学习人数：0</span>
-                        </div>
-                        <div class="bottom">
-                            <span class="fl" title="南京大学">南京大学</span>
-                            <span class="star fr">0</span>
-                        </div>
-                    </div>
-
-                    <div class="module1_6 box">
-                        <a href="course-detail.html">
-                            <img width="233" height="190"
-                                 src="/media/courses/2016/11/57035ff200014b8a06000338-240-135_dHfj8Nq.jpg"/>
-                        </a>
-                        <div class="des">
-                            <a href="course-detail.html">
-                                <h2 title="java入门2">java入门2</h2>
-                            </a>
-                            <span class="fl">难度：<i class="key">高级</i></span>
-                            <span class="fr">学习人数：0</span>
-                        </div>
-                        <div class="bottom">
-                            <span class="fl" title="慕课网2">慕课网2</span>
-                            <span class="star fr">0</span>
-                        </div>
-                    </div>
-
-                    <div class="module1_7 box">
-                        <a href="course-detail.html">
-                            <img width="233" height="190"
-                                 src="/media/courses/2016/11/57035ff200014b8a06000338-240-135_0nFiBSI.jpg"/>
-                        </a>
-                        <div class="des">
-                            <a href="course-detail.html">
-                                <h2 title="java入门3">java入门3</h2>
-                            </a>
-                            <span class="fl">难度：<i class="key">初级</i></span>
-                            <span class="fr">学习人数：1</span>
-                        </div>
-                        <div class="bottom">
-                            <span class="fl" title="慕课网3">慕课网3</span>
-                            <span class="star fr">0</span>
-                        </div>
-                    </div>
-
-                    <div class="module1_8 box">
-                        <a href="course-detail.html">
-                            <img width="233" height="190"
-                                 src="/media/courses/2016/11/540e57300001d6d906000338-240-135_MSIqfvw.jpg"/>
-                        </a>
-                        <div class="des">
-                            <a href="course-detail.html">
-                                <h2 title="python入门2">python入门2</h2>
-                            </a>
-                            <span class="fl">难度：<i class="key">中级</i></span>
-                            <span class="fr">学习人数：0</span>
-                        </div>
-                        <div class="bottom">
-                            <span class="fl" title="慕课网666">慕课网666</span>
-                            <span class="star fr">0</span>
-                        </div>
-                    </div>
 
                 </div>
             </div>
