--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -33,24 +33,26 @@
                         <div class="personal">
                             <dl class="user fr">
                                 <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
-                                <dt><img width="20" height="20" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
                                 <dl>
-                                    <dt><img width="80" height="80" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                    <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                                     <dd>
                                         <h2>django</h2>
                                         <p>{{ user.username }}</p>
                                     </dd>
                                 </dl>
                                 <div class="btn">
-                                    <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
+                                    <a class="personcenter fl" href="{% url 'users:info' %}">进入个人中心</a>
                                     <a class="fr" href="/logout/">退出</a>
                                 </div>
                             </div>
                         </div>
                     {% endif %}
-				</div>
+                <a href="{% url 'users:my_message' %}">
+                            <div class="msg-num"><span id="MsgNum">{{ request.user.get_unread_message }}</span></div>
+                        </a>
 			</div>
 
 
