--- a/templates/index.html
+++ b/templates/index.html
@@ -215,215 +215,22 @@
                 <div class="right">
                     <ul>
 
-                        <li class="">
-                            <a href="org-detail-homepage.html">
+                        {% for course_org in course_orgs %}
+                        <li class="{% if forloop.counter|divisibleby:5 %}five{% endif %}">
+                            <a href="{% url 'org:org_home' course_org.id %}">
                                 <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc.png"/>
+                                    <img width="184" height="100" src="{{ MEDIA_URL }}{{ course_org.image }}"/>
                                     <div class="score">
                                         <div class="circle">
-                                            <h2>全国知名</h2>
+                                            <h2>{{ course_org.tag }}</h2>
                                         </div>
                                     </div>
                                 </div>
-                                <p><span class="key" title="慕课网">慕课网</span></p>
+                                <p><span class="key" title="{{ course_org.name }}">{{ course_org.name }}</span></p>
                             </a>
                         </li>
 
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/bjdx.jpg"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="北京大学">北京大学</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/qhdx-logo.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="清华大学">清华大学</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/njdx.jpg"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="南京大学">南京大学</span></p>
-                            </a>
-                        </li>
-
-                        <li class="five">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc_klgAUn5.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕课网2">慕课网2</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc_Gn1sRjp.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕课网3">慕课网3</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc_Y2Tonsq.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕课网3">慕课网3</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc_OO2ykYP.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕课网4">慕课网4</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc_V0TJOyb.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕课网5">慕课网5</span></p>
-                            </a>
-                        </li>
-
-                        <li class="five">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/11/imooc_qEaMov1.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕课网666">慕课网666</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/12/bjdx.jpg"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕学网">慕学网</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/12/imooc_Gn1sRjp.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="python培训机构">python培训机构</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/12/bjdx_cCpdUw8.jpg"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="vuejs培训">vuejs培训</span></p>
-                            </a>
-                        </li>
-
-                        <li class="">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/12/imooc_klgAUn5.png"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="nodejs培训">nodejs培训</span></p>
-                            </a>
-                        </li>
-
-                        <li class="five">
-                            <a href="org-detail-homepage.html">
-                                <div class="company">
-                                    <img width="184" height="100" src="/media/org/2016/12/bjdx_bcd0m07.jpg"/>
-                                    <div class="score">
-                                        <div class="circle">
-                                            <h2>全国知名</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><span class="key" title="慕学在线">慕学在线</span></p>
-                            </a>
-                        </li>
+                        {% endfor %}
 
                     </ul>
                 </div>
